2004-07-26  Johan Dahlin  <johan@gnome.org>

	* autogen.sh: Don't hardcode automake-1.7, Fixes #148377

	* gtk/__init__.py: Readd _gobject, but warn if it's used

2004-07-25  John Finlay  <finlay@moeraki.com>

	* gtk/pygtktreemodel.c (pygtk_generic_tree_model_get_value)
	Skip pyg_value_from_pyobject() if return value is Py_None.
	Fixes #148230.

2004-07-23  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.override (clipboard_request_text_cb) Fix bug when no text.
	(clipboard_request_targets_cb) Fix bug when no targets.

2004-07-23  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.override (_wrap_gtk_list_item_new): Add deprecation warning.

	* codegen/codegen.py (write_property_based_constructor): Honor the
	"deprecated" option.

2004-07-23  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.override (_wrap_gtk_dialog_new_with_buttons)
	(_wrap_gtk_message_dialog_new) 
	Use pyg_flags_get_value().

	* gtk/gtk-types.defs (TextSearchFlags) Fix typo.

	* gtk/gtktextview.override (_wrap_gtk_text_iter_forward_search)
	(_wrap_gtk_text_iter_backward_search)
	Use pyg_flags_get_value.
	
	* gtk/gtk-extrafuncs.defs (flags) (set_flags) (unset_flags)
	Use GtkWidgetFlags as args and return value.

2004-07-22  Johan Dahlin  <johan@gnome.org>

	* setup.py (MICRO_VERSION): 
	* configure.in: Post release version bump

=== PyGtk 2.3.94 ===
2004-07-22  Johan Dahlin  <johan@gnome.org>

	* NEWS: Update

2004-07-21  Johan Dahlin  <johan@gnome.org>

	* gobject/pygflags.c (pyg_flags_get_first_value_name) 
	(pyg_flags_get_first_value_nick): Add, so Lorenzo can introspect
	flags properly too
	(pyg_flags_get_value_names, pyg_flags_get_value_nicks): Make this
	a little bit more useful. All values can still be fetch
	through __flags_values__

	* tests/enum.py: Improve and extend to test most enum/flags operations

2004-07-20  John Finlay  <finlay@moeraki.com>

	* codegen/codegen.py (write_enums) Fix bug causing segfault when
	loading pango module.
