@@ -1,7 +1,13 @@
 2004-07-26  Johan Dahlin  <johan@gnome.org>
 
-	* autogen.sh: Don't hardcode automake-1.7, Fixes #148377
+	* acinclude.m4: Remove, replaced with:
+	
+	* m4/jhflags.m4: New file, includes compiler macros
 
+	* m4/python.m4: New file, includes python macros
+
+	* autogen.sh: Copy over autogen.sh from gnome-common.h
+	
 	* gtk/__init__.py: Readd _gobject, but warn if it's used
 
 2004-07-25  John Finlay  <finlay@moeraki.com>
